finished up code

--- a/Aurora_raw.ipynb
+++ b/Aurora_raw.ipynb
@@ -176,31 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         Rosa Casanova\n",
-       "1         Rosa Casanova\n",
-       "2                  None\n",
-       "3      Marianela Varela\n",
-       "4       Glenis Barragán\n",
-       "             ...       \n",
-       "307                None\n",
-       "308                None\n",
-       "309                None\n",
-       "310                None\n",
-       "311                None\n",
-       "Name: gestor, Length: 294, dtype: object"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use dictionary to give other values to the variable\n",
     "gestor_dict = {\n",
@@ -230,7 +208,7 @@
     "        return value\n",
     "\n",
     "\n",
-    "aurora_raw['gestor'].apply(lambda x: gestorMap(x))"
+    "aurora_raw['gestor'] = aurora_raw['gestor'].apply(lambda x: gestorMap(x))"
    ]
   },
   {
