--- a/Aurora.ipynb
+++ b/Aurora.ipynb
@@ -123,31 +123,31 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Drop observations of Aurora team phones and test registers \n",
+    "# Drop observations of Aurora team phones and test registers\n",
     "aurora = aurora.drop(aurora[aurora.UserId == 311571598].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311398466 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311396734 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311361421 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311361350 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311361257 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311337494 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311325070 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311325038 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311272934 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 310820267 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 310543580 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 310357249 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 310191611 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 308421831 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 306028996 ].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311398466].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311396734].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311361421].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311361350].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311361257].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311337494].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311325070].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311325038].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311272934].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 310820267].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 310543580].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 310357249].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 310191611].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 308421831].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 306028996].index)\n",
     "aurora = aurora.drop(aurora[aurora.UserId == 311725039].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311719001 ].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311719001].index)\n",
     "aurora = aurora.drop(aurora[aurora.UserId == 311718121].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311699383 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311696700 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 312179120 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311965863 ].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311965863 ].index)"
+    "aurora = aurora.drop(aurora[aurora.UserId == 311699383].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311696700].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 312179120].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311965863].index)\n",
+    "aurora = aurora.drop(aurora[aurora.UserId == 311965863].index)\n"
    ]
   },
   {
@@ -156,10 +156,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Variable of date in date format\n",
+    "# Variable of date in date format\n",
     "aurora[\"Inicio interacción\"] = pd.to_datetime(\n",
-    "aurora[\"Inicio interacción\"], format='%Y-%m-%d %H:%M:%S', errors='coerce', utc=True).dt.strftime('%Y-%m-%d')\n",
-    "aurora = aurora[aurora[\"Inicio interacción\"] < '2023-10-29']"
+    "    aurora[\"Inicio interacción\"], format='%Y-%m-%d %H:%M:%S', errors='coerce', utc=True).dt.strftime('%Y-%m-%d')\n",
+    "aurora = aurora[aurora[\"Inicio interacción\"] < '2023-10-29']\n"
    ]
   },
   {
@@ -168,45 +168,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Rename variables \n",
-    "newColumns = {  'UserId' : 'objectid',\n",
-    "                'Edad'\t: 'e06_edad',\n",
-    "                'Género' :\t'e07_gener',\n",
-    "                'Latitud' : 'lat',\n",
-    "                'Longitud' : 'lon',\n",
-    "                \"¿En qué país naciste?\" : 'e08_pais_',\n",
-    "                'Otro país de nacimiento'\t: 'e09_otro_p',\n",
-    "                '¿En qué país iniciaste tu viaje actual?'\t: 'e10_pais_',\n",
-    "                'Otro país de inicio'\t: 'e11_otro_p',\n",
-    "                '¿En qué país vivías hace un año?'\t : 'e12_pais_',\n",
-    "                'Otro país'\t: 'e13_otro_p',\n",
-    "                'Restringir una o más raciones de alimentos' :\t'e15__has_',\n",
-    "                'Dormir a la intemperie' :\t'e16__tu_',\n",
-    "                'Ha necesitado asistencia médica' : 'asistencia_medica',\n",
-    "                '¿Cuántas personas te acompañan en tu viaje?' :\t'e17__cua',\n",
-    "                'Hay niños, niñas o adolescentes'\t : 'e18__entr',\n",
-    "                'Total NNA'\t: 'e19_1__cu',\n",
-    "                'NNA de 0 a 5' :\t'e20__cua',\n",
-    "                'NNA de 6 a 11' :\t'e21__cua',\n",
-    "                'NNA de 12 a 17'\t: 'e22__cua',\n",
-    "                'Lugar interacción'\t: 'e24__me_c',\n",
-    "                'Mujer embarazo viajando' : 'm01__en_t',\n",
-    "                'Mujer lactando viajando' : 'lactante',\n",
-    "                'Tienes alguna enfermedad crónica'\t: 'm02__en_t',\n",
-    "                'Tienes alguna condición de discapacidad'\t: 'm03__dent',\n",
-    "                'Cuáles han sido tus 3 principales necesidades': 'necesidades', \n",
-    "                '¿Recibiste ayuda humanitaria en el lugar actual?' : 'm09__acce',\n",
-    "                'Cual ayuda humanitaria' :\t'm12__cua',       \n",
-    "                'Qué tan fácil fue acceder a la ayuda' :\t'm14_respec',\n",
-    "                'Qué tan satisfecho te sientes respecto a la ayuda' : 'm15__que',\n",
-    "               'Recomendarías la ayuda ' : 'm16_de_acu',\n",
-    "               'Cual ayuda humanitaria NNA' :\t'm18_me_con',      \n",
-    "               'NNA: Qué tan fácil fue acceder a la ayuda' : 'm19_respec',\n",
-    "               'NNA: Qué tan satisfecho te sientes respecto a la ayuda' :\t'm20__que',\n",
-    "               'NNA: Recomendarías la ayuda' : 'm21_de_acu',\n",
+    "# Rename variables\n",
+    "newColumns = {'UserId': 'objectid',\n",
+    "              'Edad': 'e06_edad',\n",
+    "              'Género':\t'e07_gener',\n",
+    "              'Latitud': 'lat',\n",
+    "              'Longitud': 'lon',\n",
+    "              \"¿En qué país naciste?\": 'e08_pais_',\n",
+    "              'Otro país de nacimiento': 'e09_otro_p',\n",
+    "              '¿En qué país iniciaste tu viaje actual?': 'e10_pais_',\n",
+    "              'Otro país de inicio': 'e11_otro_p',\n",
+    "              '¿En qué país vivías hace un año?': 'e12_pais_',\n",
+    "              'Otro país': 'e13_otro_p',\n",
+    "              'Restringir una o más raciones de alimentos':\t'e15__has_',\n",
+    "              'Dormir a la intemperie':\t'e16__tu_',\n",
+    "              'Ha necesitado asistencia médica': 'asistencia_medica',\n",
+    "              '¿Cuántas personas te acompañan en tu viaje?':\t'e17__cua',\n",
+    "              'Hay niños, niñas o adolescentes': 'e18__entr',\n",
+    "              'Total NNA': 'e19_cu',  # in the first round is e19_cu not e19_1_cu,\n",
+    "              'NNA de 0 a 5':\t'e20__cua',\n",
+    "              'NNA de 6 a 11':\t'e21__cua',\n",
+    "              'NNA de 12 a 17': 'e22__cua',\n",
+    "              'Lugar interacción': 'e24__me_c',\n",
+    "              'Mujer embarazo viajando': 'm01__en_t',\n",
+    "              'Mujer lactando viajando': 'lactante',\n",
+    "              'Tienes alguna enfermedad crónica': 'm02__en_t',\n",
+    "              'Tienes alguna condición de discapacidad': 'm03__dent',\n",
+    "              'Cuáles han sido tus 3 principales necesidades': 'necesidades',\n",
+    "              '¿Recibiste ayuda humanitaria en el lugar actual?': 'm09__acce',\n",
+    "              'Cual ayuda humanitaria':\t'm12__cua',\n",
+    "              'Qué tan fácil fue acceder a la ayuda':\t'm14_respec',\n",
+    "              'Qué tan satisfecho te sientes respecto a la ayuda': 'm15__que',\n",
+    "              'Recomendarías la ayuda ': 'm16_de_acu',\n",
+    "              'Cual ayuda humanitaria NNA':\t'm18_me_con',\n",
+    "              'NNA: Qué tan fácil fue acceder a la ayuda': 'm19_respec',\n",
+    "              'NNA: Qué tan satisfecho te sientes respecto a la ayuda':\t'm20__que',\n",
+    "              'NNA: Recomendarías la ayuda': 'm21_de_acu',\n",
     "\n",
-    "}\n",
-    "\n",
+    "              }\n",
     "\n",
     "\n",
     "aurora_carto = aurora.rename(columns=newColumns)"
@@ -218,8 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filling missing values\n",
-    "aurora_carto.fillna(999999, inplace=True)"
+    "# filling missing values\n",
+    "aurora_carto.fillna(999999, inplace=True)\n"
    ]
   },
   {
@@ -228,14 +227,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create the variable timeunix\n",
-    "def toUnixTimestamp(time, format:str = \"%d/%m/%Y\"):\n",
+    "# Create the variable timeunix\n",
+    "def toUnixTimestamp(time, format: str = \"%d/%m/%Y\"):\n",
     "    start = datetime(1970, 1, 1)\n",
     "    target = datetime.strptime(time, format)\n",
     "    in_seconds = (target - start).total_seconds()\n",
     "    in_milliseconds = int(in_seconds) * 1000\n",
     "    return in_milliseconds\n",
-    "aurora_carto[\"timeunix\"] = aurora_carto[\"Inicio interacción\"].apply(lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))\n"
+    "\n",
+    "\n",
+    "aurora_carto[\"timeunix\"] = aurora_carto[\"Inicio interacción\"].apply(\n",
+    "    lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))"
    ]
   },
   {
@@ -975,12 +977,13 @@
    ],
    "source": [
     "for column in columns:\n",
-    "  sns.countplot(x=column, data=aurora_carto, order = aurora_carto[column].value_counts().index)\n",
-    "  plt.xticks(rotation=70, fontsize=10)\n",
-    "  plt.xlabel(column, fontsize=12)\n",
+    "    sns.countplot(x=column, data=aurora_carto,\n",
+    "                  order=aurora_carto[column].value_counts().index)\n",
+    "    plt.xticks(rotation=70, fontsize=10)\n",
+    "    plt.xlabel(column, fontsize=12)\n",
     "#  plt.title(f'[{column}]', fontsize=12)\n",
-    "  plt.show()\n",
-    "  plt.clf()"
+    "    plt.show()\n",
+    "    plt.clf()"
    ]
   },
   {
@@ -989,15 +992,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#database for Carto\n",
-    "aurora_carto.to_csv('lacro_oct_2023.csv', encoding='utf-8', index=False)"
+    "# database for Carto\n",
+    "aurora_carto.to_csv('lacro_oct_2023.csv', encoding='utf-8', index=False)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Daily report"
+    "Daily report\n"
    ]
   },
   {
@@ -1363,10 +1367,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Needs and feedback"
+    "Needs and feedback\n"
    ]
   },
   {
@@ -1631,7 +1636,8 @@
     }
    ],
    "source": [
-    "aurora['Cuáles han sido tus 3 principales necesidades'] = aurora['Cuáles han sido tus 3 principales necesidades'].str.split('|')\n",
+    "aurora['Cuáles han sido tus 3 principales necesidades'] = aurora['Cuáles han sido tus 3 principales necesidades'].str.split(\n",
+    "    '|')\n",
     "prueba = aurora.explode('Cuáles han sido tus 3 principales necesidades')\n",
     "prueba.head()"
    ]
@@ -1670,20 +1676,21 @@
     "# use dictionary for necessities\n",
     "\n",
     "nec_dict = {\n",
-    "1: \"Agua\",\n",
-    "2: \"Alimentación o kit de alimentación\", \n",
-    "3: \"Alojamiento temporal\", \n",
-    "4: \"Asistencia legal\",\n",
-    "5: \"Ayuda psicológica\",\n",
-    "6: \"Dinero en efectivo\", \n",
-    "7: \"Duchas o baños\", \n",
-    "8: \"Educación o espacios educativos\",\n",
-    "9: \"Espacios seguros para adultos\",\n",
-    "10: \"Kit de aseo o elementos de higiene\",\n",
-    "11: \"Salud, primeros auxilios o atención médica\",\n",
-    "12: \"Transporte humanitario\", \n",
-    "13: \"Otra\" \n",
+    "    1: \"Agua\",\n",
+    "    2: \"Alimentación o kit de alimentación\",\n",
+    "    3: \"Alojamiento temporal\",\n",
+    "    4: \"Asistencia legal\",\n",
+    "    5: \"Ayuda psicológica\",\n",
+    "    6: \"Dinero en efectivo\",\n",
+    "    7: \"Duchas o baños\",\n",
+    "    8: \"Educación o espacios educativos\",\n",
+    "    9: \"Espacios seguros para adultos\",\n",
+    "    10: \"Kit de aseo o elementos de higiene\",\n",
+    "    11: \"Salud, primeros auxilios o atención médica\",\n",
+    "    12: \"Transporte humanitario\",\n",
+    "    13: \"Otra\"\n",
     "}\n",
+    "\n",
     "\n",
     "def necesidadMap(value):\n",
     "    try:\n",
@@ -1696,7 +1703,8 @@
     "        return value\n",
     "\n",
     "\n",
-    "prueba['necesidades'] = prueba['Cuáles han sido tus 3 principales necesidades'].apply(lambda x: necesidadMap(x))"
+    "prueba['necesidades'] = prueba['Cuáles han sido tus 3 principales necesidades'].apply(\n",
+    "    lambda x: necesidadMap(x))"
    ]
   },
   {
@@ -1748,41 +1756,41 @@
    "source": [
     "# Rename variables according to Carto names (first round)\n",
     "\n",
-    "newColumns = { \n",
-    "                'Edad'\t: 'e06_edad',\n",
-    "                'Genre' :\t'e07_gener',\n",
-    "                \"País nacimiento\" : 'e08_pais_',\n",
-    "                'Nacimiento otro'\t: 'e09_otro_p',\n",
-    "                'País inicio'\t: 'e10_pais_',\n",
-    "                'Inicio otro'\t: 'e11_otro_p',\n",
-    "                'Pais vivió'\t : 'e12_pais_',\n",
-    "                'Vivió otro'\t: 'e13_otro_p',\n",
-    "                'Alimentos' :\t'e15__has_',\n",
-    "                'Dormir' :\t'e16__tu_',\n",
-    "                'Grupo' :\t'e17__cua',\n",
-    "                'NNA'\t : 'e18__entr',\n",
-    "                'Total NNA'\t: 'e19_1__cu',\n",
-    "                '0 a 5' :\t'e20__cua',\n",
-    "                '6 a 11' :\t'e21__cua',\n",
-    "                '12 a 17'\t: 'e22__cua',\n",
-    "                'Zona'\t: 'e24__me_c',\n",
-    "                'Mujer embarazo' : \t'm01__en_t',\n",
-    "                'Enfermedad'\t: 'm02__en_t',\n",
-    "                'Discapacidad'\t: 'm03__dent',\n",
-    "                'Ayuda humanitaria' :\t'm09__acce',\n",
-    "                'Cuales' :\t'm12__cua',              # change this variable according to final adjustments doing by Orlando\n",
-    "                'acceso' :\t'm14_respec',\n",
-    "                'satisfaccion' : 'm15__que',\n",
-    "               'recomendación' :\t'm16_de_acu',\n",
-    "                #'Cuales' :\t'm18_me_con',      # change this variable (NNA) according to final adjustments doing by Orlando\n",
-    "                'acceso_nna' : 'm19_respec',\n",
-    "                'satisfaccion_nna' :\t'm20__que',\n",
-    "                'recomendacion_nna' : 'm21_de_acu',\n",
-    "                'Razones no acceso'\t: 'm24_me_gus',\n",
-    "                'Razones no viaje' :\t'm29_por_qu',\n",
-    "                'Días' :\t'm30__cua',\n",
+    "newColumns = {\n",
+    "    'Edad': 'e06_edad',\n",
+    "    'Genre':\t'e07_gener',\n",
+    "    \"País nacimiento\": 'e08_pais_',\n",
+    "    'Nacimiento otro': 'e09_otro_p',\n",
+    "    'País inicio': 'e10_pais_',\n",
+    "    'Inicio otro': 'e11_otro_p',\n",
+    "    'Pais vivió': 'e12_pais_',\n",
+    "    'Vivió otro': 'e13_otro_p',\n",
+    "    'Alimentos':\t'e15__has_',\n",
+    "    'Dormir':\t'e16__tu_',\n",
+    "    'Grupo':\t'e17__cua',\n",
+    "    'NNA': 'e18__entr',\n",
+    "    'Total NNA': 'e19_cu',  # in the first round is e19_cu not e19_1_cu\n",
+    "    '0 a 5':\t'e20__cua',\n",
+    "    '6 a 11':\t'e21__cua',\n",
+    "    '12 a 17': 'e22__cua',\n",
+    "    'Zona': 'e24__me_c',\n",
+    "    'Mujer embarazo': \t'm01__en_t',\n",
+    "    'Enfermedad': 'm02__en_t',\n",
+    "    'Discapacidad': 'm03__dent',\n",
+    "    'Ayuda humanitaria':\t'm09__acce',\n",
+    "    # change this variable according to final adjustments doing by Orlando\n",
+    "    'Cuales':\t'm12__cua',\n",
+    "    'acceso':\t'm14_respec',\n",
+    "    'satisfaccion': 'm15__que',\n",
+    "    'recomendación':\t'm16_de_acu',\n",
+    "    # 'Cuales' :\t'm18_me_con',      # change this variable (NNA) according to final adjustments doing by Orlando\n",
+    "    'acceso_nna': 'm19_respec',\n",
+    "    'satisfaccion_nna':\t'm20__que',\n",
+    "    'recomendacion_nna': 'm21_de_acu',\n",
+    "    'Razones no acceso': 'm24_me_gus',\n",
+    "    'Razones no viaje':\t'm29_por_qu',\n",
+    "    'Días':\t'm30__cua',\n",
     "}\n",
-    "\n",
     "\n",
     "\n",
     "# there are still missing variables of dates, geographical coordinates, feeback of services.\n",
@@ -1794,9 +1802,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
