--- a/Aurora.ipynb
+++ b/Aurora.ipynb
@@ -115,12 +115,12 @@
     "        local_df[columnDict[column][\"y\"]] = local_df[column].str.lower().apply(\n",
     "            lambda x: getCoordinate(x, \"y\", valueDict, expressionDict))\n",
     "\n",
-    "    return local_df\n"
+    "    return local_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,24 +151,24 @@
     "aurora = aurora.drop(aurora[aurora.UserId == 311696700].index)\n",
     "aurora = aurora.drop(aurora[aurora.UserId == 312179120].index)\n",
     "aurora = aurora.drop(aurora[aurora.UserId == 311965863].index)\n",
-    "aurora = aurora.drop(aurora[aurora.UserId == 311965863].index)"
+    "aurora = aurora.drop(aurora[aurora.UserId == 311965863].index)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Variable of date in date format\n",
     "aurora[\"Inicio interacción\"] = pd.to_datetime(\n",
     "    aurora[\"Inicio interacción\"], format='%Y-%m-%d %H:%M:%S', errors='coerce', utc=True).dt.strftime('%Y-%m-%d')\n",
-    "aurora = aurora[aurora[\"Inicio interacción\"] < '2023-10-29']\n"
+    "aurora = aurora[aurora[\"Inicio interacción\"] < '2023-10-29']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +212,12 @@
     "              }\n",
     "\n",
     "\n",
-    "aurora_carto = aurora.rename(columns=newColumns)"
+    "aurora_carto = aurora.rename(columns=newColumns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,12 +226,12 @@
     "\n",
     "countries_dict = loadLocalJsonDoc(\"defaults/countries_dict.json\")\n",
     "\n",
-    "available_countries = processCountries(available_countries, countries_dict)"
+    "available_countries = processCountries(available_countries, countries_dict)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
        "[177 rows x 169 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,12 +645,12 @@
     "    country_df = gpd.read_file(file)\n",
     "\n",
     "\n",
-    "country_df"
+    "country_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -701,244 +701,29 @@
     "aurora_carto['lon_eng'] = aurora_carto['lon']\n",
     "aurora_carto['lat_eng'] = aurora_carto['lat']\n",
     "aurora_carto['longitude'] = aurora_carto['lon']\n",
-    "aurora_carto['latitude'] = aurora_carto['lat']"
+    "aurora_carto['latitude'] = aurora_carto['lat']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>e08_pais_</th>\n",
-       "      <th>long_paisn</th>\n",
-       "      <th>lat_paisna</th>\n",
-       "      <th>e10_pais_</th>\n",
-       "      <th>long_paisi</th>\n",
-       "      <th>lat_paisin</th>\n",
-       "      <th>e12_pais_</th>\n",
-       "      <th>long_paisv</th>\n",
-       "      <th>lat_paisvi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>-66.163827</td>\n",
-       "      <td>7.162132</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>-66.163827</td>\n",
-       "      <td>7.162132</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Perú</td>\n",
-       "      <td>-74.391806</td>\n",
-       "      <td>-9.191563</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Perú</td>\n",
-       "      <td>-74.391806</td>\n",
-       "      <td>-9.191563</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Otro</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Haití</td>\n",
-       "      <td>-72.658013</td>\n",
-       "      <td>18.900701</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>314</th>\n",
-       "      <td>Colombia</td>\n",
-       "      <td>-73.077732</td>\n",
-       "      <td>3.927214</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>315</th>\n",
-       "      <td>Colombia</td>\n",
-       "      <td>-73.077732</td>\n",
-       "      <td>3.927214</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316</th>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>-66.163827</td>\n",
-       "      <td>7.162132</td>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>-66.163827</td>\n",
-       "      <td>7.162132</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>-71.520644</td>\n",
-       "      <td>-39.047014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>999999.000000</td>\n",
-       "      <td>999999.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>319 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     e08_pais_     long_paisn     lat_paisna  e10_pais_     long_paisi  \\\n",
-       "0    Venezuela     -66.163827       7.162132      Chile     -71.520644   \n",
-       "1    Venezuela     -66.163827       7.162132      Chile     -71.520644   \n",
-       "2         Perú     -74.391806      -9.191563      Chile     -71.520644   \n",
-       "3         Otro  999999.000000  999999.000000      Chile     -71.520644   \n",
-       "4        Haití     -72.658013      18.900701      Chile     -71.520644   \n",
-       "..         ...            ...            ...        ...            ...   \n",
-       "314   Colombia     -73.077732       3.927214      Chile     -71.520644   \n",
-       "315   Colombia     -73.077732       3.927214      Chile     -71.520644   \n",
-       "316  Venezuela     -66.163827       7.162132  Venezuela     -66.163827   \n",
-       "317        NaN  999999.000000  999999.000000        NaN  999999.000000   \n",
-       "318        NaN  999999.000000  999999.000000        NaN  999999.000000   \n",
-       "\n",
-       "        lat_paisin e12_pais_     long_paisv     lat_paisvi  \n",
-       "0       -39.047014     Chile     -71.520644     -39.047014  \n",
-       "1       -39.047014      Perú     -74.391806      -9.191563  \n",
-       "2       -39.047014     Chile     -71.520644     -39.047014  \n",
-       "3       -39.047014     Chile     -71.520644     -39.047014  \n",
-       "4       -39.047014     Chile     -71.520644     -39.047014  \n",
-       "..             ...       ...            ...            ...  \n",
-       "314     -39.047014     Chile     -71.520644     -39.047014  \n",
-       "315     -39.047014     Chile     -71.520644     -39.047014  \n",
-       "316       7.162132     Chile     -71.520644     -39.047014  \n",
-       "317  999999.000000       NaN  999999.000000  999999.000000  \n",
-       "318  999999.000000       NaN  999999.000000  999999.000000  \n",
-       "\n",
-       "[319 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aurora_carto[[\"e08_pais_\", \"long_paisn\", \"lat_paisna\", \"e10_pais_\",\n",
-    "              \"long_paisi\", \"lat_paisin\", \"e12_pais_\", \"long_paisv\", \"lat_paisvi\"]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filling missing values\n",
-    "aurora_carto = aurora_carto.fillna(default_value)\n"
+    "aurora_carto = aurora_carto.fillna(default_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the variable timeunix\n",
     "\n",
     "aurora_carto[\"timeunix\"] = aurora_carto[\"Inicio interacción\"].apply(\n",
-    "    lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))"
+    "    lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))\n"
    ]
   },
   {
@@ -948,7 +733,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "columns = aurora_carto.columns.tolist()"
+    "columns = aurora_carto.columns.tolist()\n"
    ]
   },
   {
@@ -1898,17 +1683,17 @@
     "    plt.xlabel(column, fontsize=12)\n",
     "#  plt.title(f'[{column}]', fontsize=12)\n",
     "    plt.show()\n",
-    "    plt.clf()"
+    "    plt.clf()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
     "# database for Carto\n",
-    "aurora_carto.to_csv('aurora_round_2.csv', encoding='utf-8', index=False)\n"
+    "aurora_carto.to_csv('aurora_round_2.csv', encoding='utf-8', index=False)"
    ]
   },
   {
@@ -2215,7 +2000,7 @@
     "    values='UserId')\n",
     "# Reset the index of the pivoted DataFrame\n",
     "pivoted = pivoted.reset_index()\n",
-    "pivoted"
+    "pivoted\n"
    ]
   },
   {
@@ -2225,7 +2010,7 @@
    "outputs": [],
    "source": [
     "excel_file = 'gestores.xlsx'\n",
-    "pivoted.to_excel(excel_file, index=False)"
+    "pivoted.to_excel(excel_file, index=False)\n"
    ]
   },
   {
@@ -2501,7 +2286,7 @@
     "aurora['Cuáles han sido tus 3 principales necesidades'] = aurora['Cuáles han sido tus 3 principales necesidades'].str.split(\n",
     "    '|')\n",
     "prueba = aurora.explode('Cuáles han sido tus 3 principales necesidades')\n",
-    "prueba.head()"
+    "prueba.head()\n"
    ]
   },
   {
@@ -2526,7 +2311,7 @@
     }
    ],
    "source": [
-    "prueba[\"Cuáles han sido tus 3 principales necesidades\"].head()"
+    "prueba[\"Cuáles han sido tus 3 principales necesidades\"].head()\n"
    ]
   },
   {
@@ -2566,7 +2351,7 @@
     "\n",
     "\n",
     "prueba['necesidades'] = prueba['Cuáles han sido tus 3 principales necesidades'].apply(\n",
-    "    lambda x: necesidadMap(x))"
+    "    lambda x: necesidadMap(x))\n"
    ]
   },
   {
@@ -2597,7 +2382,7 @@
     }
    ],
    "source": [
-    "prueba['necesidades']"
+    "prueba['necesidades']\n"
    ]
   },
   {
@@ -2607,7 +2392,7 @@
    "outputs": [],
    "source": [
     "excel_file = 'necesidades.xlsx'\n",
-    "prueba.to_excel(excel_file, index=False)"
+    "prueba.to_excel(excel_file, index=False)\n"
    ]
   },
   {
@@ -2656,7 +2441,7 @@
     "\n",
     "\n",
     "# there are still missing variables of dates, geographical coordinates, feeback of services.\n",
-    "aurora = aurora.rename(columns=newColumns)"
+    "aurora = aurora.rename(columns=newColumns)\n"
    ]
   },
   {
