re-added coordinates retrieval

--- a/Aurora.ipynb
+++ b/Aurora.ipynb
@@ -24,6 +24,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# functions\n",
+    "def loadLocalJsonDoc(filepath, dataProp=''):\n",
+    "    \"\"\"\n",
+    "    return deserialised json in dictionary\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    filepath: file location or buffer.\n",
+    "    dataProp: (optional) specified property to access required data\n",
+    "    \"\"\"\n",
+    "    output = {}\n",
+    "    with open(file=filepath, mode='r', encoding='utf-8') as f:\n",
+    "        json_load = json.load(f)\n",
+    "        if (dataProp):\n",
+    "            output = json_load[dataProp]\n",
+    "        else:\n",
+    "            output = json_load\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "def changeCountriesByExpression(country, valueDict: dict[str, str]):\n",
+    "    output = \"\"\n",
+    "    for key, value in valueDict.items():\n",
+    "        match = re.match(r\"^\"+key+r\".$\", country)\n",
+    "        if (match):\n",
+    "            return value\n",
+    "\n",
+    "    return output if len(output) else country\n",
+    "\n",
+    "\n",
+    "def processCountries(countries: list[str], valueDict: dict[str, str]):\n",
+    "    output = []\n",
+    "    for country in countries:\n",
+    "        try:\n",
+    "            new_country = changeCountriesByExpression(\n",
+    "                country=country, valueDict=valueDict)\n",
+    "            output.append(new_country)\n",
+    "        except Exception as e:\n",
+    "            output.append(default_value)\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "def getCountriesWithCoordinates(countries: list[str], geo_countries: gpd.GeoDataFrame):\n",
+    "    output = {}\n",
+    "    for country in countries:\n",
+    "        try:\n",
+    "            filtered_country = geo_countries[geo_countries[\"NAME\"].str.lower(\n",
+    "            ) == country].reindex()\n",
+    "            centroidValue = (filtered_country.centroid).iloc[0]\n",
+    "            output[country] = {\"x\": centroidValue.x, \"y\": centroidValue.y}\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            output[country] = {\"x\": default_value, \"y\": default_value}\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "def toUnixTimestamp(time, format: str = \"%d/%m/%Y\"):\n",
+    "    start = datetime(1970, 1, 1)\n",
+    "    target = datetime.strptime(time, format)\n",
+    "    in_seconds = (target - start).total_seconds()\n",
+    "    in_milliseconds = int(in_seconds) * 1000\n",
+    "    return in_milliseconds\n",
+    "\n",
+    "\n",
+    "def getCoordinate(value: str, side: str, valueDict: dict[str, tuple[int, int]], expressionDict: dict[str, str]):\n",
+    "    try:\n",
+    "        country = changeCountriesByExpression(value, expressionDict)\n",
+    "        return valueDict[country][side]\n",
+    "    except Exception as e:\n",
+    "        return default_value\n",
+    "\n",
+    "\n",
+    "def processFieldCoordinates(df: pd.DataFrame, columnDict: dict[str, dict[str, str]], valueDict: dict[str, tuple[int, int]], expressionDict: dict[str, str]):\n",
+    "    local_df = deepcopy(df)\n",
+    "    print(valueDict)\n",
+    "    for column in columnDict.keys():\n",
+    "        local_df[columnDict[column][\"x\"]] = local_df[column].str.lower().apply(\n",
+    "            lambda x: getCoordinate(x, \"x\", valueDict, expressionDict))\n",
+    "        local_df[columnDict[column][\"y\"]] = local_df[column].str.lower().apply(\n",
+    "            lambda x: getCoordinate(x, \"y\", valueDict, expressionDict))\n",
+    "\n",
+    "    return local_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 240,
    "metadata": {},
    "outputs": [
@@ -208,6 +299,41 @@
     "}\n",
     "\n",
     "aurora_carto = aurora.rename(columns=newColumns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "available_countries = [x.lower() for x in list(set(list(aurora_carto[\"e08_pais_\"].unique(\n",
+    ")) + list(aurora_carto[\"e10_pais_\"].unique()) + list(aurora_carto[\"e12_pais_\"].unique()))) if type(x) == str]\n",
+    "\n",
+    "countries_dict = loadLocalJsonDoc(\"defaults/countries_dict.json\")\n",
+    "\n",
+    "available_countries = processCountries(available_countries, countries_dict)\n",
+    "\n",
+    "# adding coordinates value\n",
+    "country_data_path = \"simplecache::https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip\"\n",
+    "\n",
+    "country_df = \"\"\n",
+    "\n",
+    "with fsspec.open(country_data_path) as file:\n",
+    "    country_df = gpd.read_file(file)\n",
+    "\n",
+    "\n",
+    "country_df\n",
+    "\n",
+    "countriesWithCoordinates = getCountriesWithCoordinates(\n",
+    "    available_countries, country_df)\n",
+    "country_column_dict = loadLocalJsonDoc(\"defaults/country_column_dict.json\")\n",
+    "aurora_carto = processFieldCoordinates(\n",
+    "    aurora_carto, country_column_dict, countriesWithCoordinates, countries_dict)\n",
+    "aurora_carto['lon_eng'] = aurora_carto['lon']\n",
+    "aurora_carto['lat_eng'] = aurora_carto['lat']\n",
+    "aurora_carto['longitude'] = aurora_carto['lon']\n",
+    "aurora_carto['latitude'] = aurora_carto['lat']"
    ]
   },
   {
